--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "google-map-react": "^2.0.8",
+    "opencv": "github:peterbraden/node-opencv",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -42,13 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/peterbraden/node-opencv.git"
-  },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-html5-camera-photo": "^1.5.4",
-    "opencv": "^7.0.0"
+    "react-html5-camera-photo": "^1.5.4"
   }
 }
